# txlab

./: .gitattributes  .gitignore  .ocamlformat  README.md  bitcoin-lib.opam  bun.lockb  cipher.opam  dune-project  index.html  package.json  txlab.opam  vite.config.js
.github/workflows/: deploy.yml
dune.lock/: dune-rpc.pkg  dyn.pkg  lock.dune  melange-bitcoin-lib.pkg  melange-radix-ui.pkg  melange.pkg  ocamlc-loc.pkg  stdune.pkg
lib/: dune
src/: app.mlx  dune  home.mlx  main.mlx  styles.css
src/bindings/: bitcoinjs.ml  dune
src/components/: dune  inputs.mli  inputs.mlx  outputs.mli  outputs.mlx  unit_switcher.mli  unit_switcher.mlx
src/components/shared/: dune  footer.mlx  layout.mli  layout.mlx  nav.mli  nav.mlx
src/components/ui/: badge.mli  badge.mlx  dune  icon.mli  icon.mlx  link.mli  link.mlx  script_text.mli  script_text.mlx  switch.mli  switch.mlx  tooltip.mli  tooltip.mlx
src/ctx/: display.mli  display.mlx  dune
src/hooks/: dune  use_metadata.mli  use_metadata.mlx
src/pages/: dune  home.mli  home.mlx  psbt.mli  psbt.mlx
src/utils/: converters.ml  converters.mli  dune  local_storage.ml  local_storage.mli  number_fns.ml  number_fns.mli  ops.ml  ops.mli  validators.ml
test/: dune
